--- a/hello.html
+++ b/hello.html
@@ -17,8 +17,15 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 		
+		<!--description-->				
 		<div>
 			<p> C'est moi ;) </p>
 		</div>
+
+		<!--Recompense-->
+		<div>
+			<p> en construction.. </p>
+		</div>
+
 	
 </body></html>
