--- a/hello.html
+++ b/hello.html
@@ -24,7 +24,8 @@
 
 		<!--Recompense-->
 		<div>
-			<p> en construction.. </p>
+			<h1> Mes Récompense </h1>
+			<p> <img src="images/medal_bronze.png"> </p>
 		</div>
 
 	
