--- a/hello.html
+++ b/hello.html
@@ -25,7 +25,7 @@
 		<!--Recompense-->
 		<div>
 			<h1> Mes Récompense </h1>
-			<p> <img src="images/medal_bronze.png"> </p>
+			<p> <img src="images/medal_bronze.png"> <img src="image/medal_silver.png"> </p>
 		</div>
 
 	
