--- a/hello.html
+++ b/hello.html
@@ -31,6 +31,7 @@
 			<h1> Commandes GIT </h1>
 			<p> Git pull </p>
       <p> Git push </p>
+      <p> Git stash </p>
     </div>
 
 </body></html>
